# homework_6_web

./: README.md  connect.py  create-tables.sql  homework_6.sql  main.py  pyproject.toml
